[build-system]
requires = [
    "setuptools >= 64.0.0",
    "setuptools_scm[toml] >= 8.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "echopop"
dynamic = ["version"]
description = "A tool to generate biological estimates from acoustic data collected from echosounders"
readme = "README.md"
license = {text = "Apache License, Version 2.0"}
authors = [
    {name = "Brandyn Lucca", email = "brandyn.lucca@gmail.com"}
]
maintainers = [
    {name = "Wu-Jung Lee", email = "leewujung@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.12, <3.14"
dependencies = [
    # Data processing and wrangling stack
    "awkward",
    "lmfit",
    "numpy",
    "openpyxl",
    "pandas",
    "scipy",
    "numba>=0.63.0b1",
    "xarray>=2026.01.0",
    "sqlalchemy",
    # Spatial data processing stack
    "cartopy",
    "geopandas",
    "geopy",
    "pyproj",
    "shapely",
    "verde",
    # Validation stack
    "pandera>=0.25",
    "pydantic>=2.0.0",
    "traitlets",
    # Data stack
    "pyarrow",
    # Jupyter stack
    "ipympl",
    "jupyter_bokeh>=3.0.5",
    # Static visualization stack
    "matplotlib",
    "seaborn",
    # Interactive visualization stack
    "bokeh",
    "geoviews",
    "holoviews",
    "hvplot",
    "ipywidgets"

]

[project.urls]
Homepage = "https://github.com/OSOceanAcoustics/echopop"

[tool.setuptools.packages.find]
where = ["."]
include = ["echopop*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
write_to = "echopop/_version.py"
write_to_template = 'version = "{version}"  # noqa'

# --- Ruff configuration ---
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "echopop/workflows/nwfsc_feat/workflows",
    "*.ipynb"
]

[tool.ruff.lint]
# E/F = Flake8 basics, I = Isort, D = Docstrings (pydocstyle)
select = ["E", "F", "I", "D", "UP", "B"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # conflict: 1 blank line before class (D211 preferred)
    "D213", # conflict: multi-line summary second line (D212 preferred)
]

[tool.ruff.lint.per-file-ignores]
# Ignore ALL docstring rules in the tests directory and all its subfolders
"echopop/tests/**" = ["D"]
# External tests
"tests/**" = ["D"]
# Ignore ALL docstring rules in the docs directory and all its subfolders
"docs/**" = ["D"]
# Ignore for workflows
"echopop/workflow_examples/**" = ["D", "B"]
# To specifically hit those __init__.py files in core:
"echopop/core/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["echopop"]
combine-as-imports = true

# --- Other precommit tools ---
[tool.codespell]
skip = "*.ipynb"
ignore-words-list = "notin,burnin"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
known_first_party = "echopop"
known_third_party = ["_echopop_version", "setuptools"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 100
