[metadata]
name = EchoPro
maintainer = Wu-Jung Lee
maintainer_email = leewujung@gmail.com
description = A tool that uses acoustic and biological data to produce biomass estimates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uw-echospace/EchoPro
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
author = Brandon Reyes
author_email = reyesb123@gmail.com
platforms = OS Independent

[options]
packages = find:
platforms = any
py_modules =
    _echopro_version
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools_scm

[black]
line-length = 100

[flake8]
max-line-length = 100
output-file = flake8_log.txt
tee = True
ignore = E722,E203,W503,T001

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 100
