[metadata]
name = echopop
maintainer = Wu-Jung Lee
maintainer_email = leewujung@gmail.com
description = A tool to generate biological estimates from acoustic data collected from echosounders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echopop
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
author = Brandyn Lucca
author_email = brandyn.lucca@gmail.com
platforms = OS Independent

[options]
packages = find:
platforms = any
py_modules =
    _echopop_version
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools_scm
